# Systems

./: .gitignore  CMakeLists.txt  CMakePresets.json  meow.cpp
1/: main.c  users.db
2/: main.c  test  test_gen.c
3/: main.c
4/: client.c  main.c  msgq.h  server.c  test.txt
5/: main.c
6/: client.c  server.c  shared.h
6/jk/: client.txt  server.txt
7/: fifo_maker.c  main.c
include/: base.h
